syntax = "proto3";

package creation.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/creation";

import "google/protobuf/timestamp.proto";

import "creation/messages/creation_upload.proto";

message CreationInfo {
  Creation creation = 1;
  CreationEngagement creation_engagement = 2;
  Category category = 3;
}

message Creation {
  int64 creation_id = 1;
  creation.messages.CreationUpload base_info = 2;
  google.protobuf.Timestamp upload_time = 3;
}

message CreationEngagement {
  int64 creation_id = 1;
  int32 views = 2;
  int32 likes = 3;
  int32 saves = 4;
  google.protobuf.Timestamp publish_time = 5;
}

message Category {
  int32 category_id = 1;
  int32 parent = 2;
  string name = 3;
  string description = 4;
}